<resources>
    <string name="app_name">WeParty</string>
    <string name="logo">logo</string>
    <string name="seu_app_para_toda_hora">Seu app para toda hora!</string>
    <string name="cadastre_se">CADASTRE-SE</string>
    <string name="faca_seu_login">FAÇA SEU LOGIN</string>
    <string name="continuar">Continuar</string>
    <string name="aproveite_da_melhor_forma">Aproveite da melhor forma nosso app para encontrar os melhores eventos e festas e se conectar com seus amigos.</string>
    <string name="parabens">Parabéns</string>
    <string name="_success">sucessImg</string>
    <string name="login">Login</string>
    <string name="faca_login">Faça login para voltar a festa com seus amigos</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="cadastro">Cadastro</string>
    <string name="cadastre_se_e_celebre">Cadastre-se e celebre com amigos nos melhores lugares da sua região</string>
    <string name="perfil_email">Email</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_feed">Feed</string>
    <string name="title_eventos">Eventos</string>
    <string name="title_perfil">Perfil</string>
    <string name="todos_seus_eventos">Todos seus eventos</string>
    <string name="mais">+</string>
    <string name="upload">envie uma foto para as pessoas saberem mais do seu evento</string>
    <string name="feed_de_eventos">Feed de eventos</string>
    <string name="perfil">Perfil</string>
    <string name="crie_seu_evento">Crie seu evento</string>
    <string name="bairro">Bairro</string>
    <string name="cep">Cep</string>
    <string name="cidade">Cidade</string>
    <string name="complemento">Complemento</string>
    <string name="data_do_evento">Data e Hora do Evento</string>
    <string name="descricao">Descrição</string>
    <string name="nome_do_evento">Nome do Evento</string>
    <string name="n">Nº</string>
    <string name="rua">Rua</string>
    <string name="uf">UF</string>
    <string name="descricao_do_evento">Descrição do Evento</string>
    <string name="nome">Nome</string>
    <string name="nome_Perfil">Nome do Usuario</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="sair">Sair</string>
</resources>