<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginRegistroActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="180dp"
        android:layout_height="250dp"
        android:layout_marginTop="128dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        tools:ignore="ImageContrastCheck" />

    <android.widget.Button
        android:id="@+id/btnLogarAbrir"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/design_btn_register"
        android:text="@string/faca_seu_login"
        android:textColor="@color/real_white"
        app:layout_constraintBottom_toTopOf="@+id/btnRegistrarAbrir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <android.widget.Button
        android:id="@+id/btnRegistrarAbrir"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginBottom="160dp"
        android:background="@drawable/design_btn_login"
        android:text="@string/cadastre_se"
        android:textColor="@color/orange_main"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>