<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CriarEvento">

        <TextView
            android:id="@+id/textEventos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/crie_seu_evento"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <android.widget.ImageButton
            android:id="@+id/btnVoltarCriarEvento"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,ImageContrastCheck" />

        <android.widget.Button
            android:id="@+id/btn_upload"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="48dp"
            android:drawableTop="@drawable/ic_upload"
            android:text="@string/upload"
            android:textAllCaps="false"
            android:textColor="@color/dark_gray"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textEventos"
            tools:ignore="TextSizeCheck,TextContrastCheck" />

        <EditText
            android:id="@+id/editTextNomeEvento"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="48dp"
            android:background="@drawable/design_txt_criar_evento"
            android:ems="10"
            android:hint="@string/nome_do_evento"
            android:inputType="text|textAutoComplete|textAutoCorrect"
            android:paddingStart="10dp"
            android:textColorHint="@color/dark_gray"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_upload"
            tools:ignore="RtlSymmetry"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextDescricao"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="48dp"
            android:background="@drawable/design_txt_criar_evento"
            android:ems="10"
            android:hint="@string/descricao"
            android:inputType="textMultiLine|textLongMessage|textAutoComplete|textAutoCorrect"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            android:textColorHint="@color/dark_gray"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNomeEvento"
            tools:ignore="RtlSymmetry"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextDataDoEvento"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="48dp"
            android:background="@drawable/design_txt_criar_evento"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/data_do_evento"
            android:inputType="none"
            android:paddingStart="10dp"
            android:textColorHint="@color/dark_gray"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextDescricao"
            tools:ignore="Autofill,DuplicateSpeakableTextCheck,RtlSymmetry" />

        <EditText
            android:id="@+id/editTextHoraDoEvento"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="48dp"
            android:background="@drawable/design_txt_criar_evento"
            android:ems="10"
            android:hint="@string/data_do_evento"
            android:cursorVisible="false"
            android:focusable="false"
            android:inputType="none"
            android:paddingStart="10dp"
            android:textColorHint="@color/dark_gray"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextDataDoEvento"
            tools:ignore="RtlSymmetry"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextCep"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="48dp"
            android:background="@drawable/design_txt_criar_evento"
            android:ems="10"
            android:hint="@string/cep"
            android:inputType="number"
            android:maxLength="8"
            android:paddingStart="10dp"
            android:textColorHint="@color/dark_gray"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextHoraDoEvento"
            tools:ignore="RtlSymmetry"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextCidade"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="156dp"
            android:background="@drawable/design_txt_criar_evento"
            android:ems="10"
            android:hint="@string/cidade"
            android:inputType="text|textPostalAddress|textAutoComplete|textAutoCorrect"
            android:paddingStart="10dp"
            android:textColorHint="@color/dark_gray"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextCep"
            tools:ignore="RtlSymmetry"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextUf"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="48dp"
            android:background="@drawable/design_txt_criar_evento"
            android:ems="10"
            android:hint="@string/uf"
            android:inputType="text|textPostalAddress|textAutoComplete|textAutoCorrect"
            android:maxLength="2"
            android:paddingStart="10dp"
            android:textColorHint="@color/dark_gray"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editTextCidade"
            app:layout_constraintTop_toBottomOf="@+id/editTextCep"
            tools:ignore="RtlSymmetry"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextBairro"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="48dp"
            android:background="@drawable/design_txt_criar_evento"
            android:ems="10"
            android:hint="@string/bairro"
            android:inputType="text|textPostalAddress|textAutoComplete|textAutoCorrect"
            android:paddingStart="10dp"
            android:textColorHint="@color/dark_gray"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextCidade"
            tools:ignore="RtlSymmetry"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextRua"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="156dp"
            android:background="@drawable/design_txt_criar_evento"
            android:ems="10"
            android:hint="@string/rua"
            android:inputType="text|textPostalAddress|textAutoComplete|textAutoCorrect"
            android:paddingStart="10dp"
            android:textColorHint="@color/dark_gray"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextBairro"
            tools:ignore="RtlSymmetry"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextNumero"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="48dp"
            android:background="@drawable/design_txt_criar_evento"
            android:ems="10"
            android:hint="@string/n"
            android:inputType="number"
            android:paddingStart="10dp"
            android:textColorHint="@color/dark_gray"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editTextRua"
            app:layout_constraintTop_toBottomOf="@+id/editTextBairro"
            tools:ignore="RtlSymmetry"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextComplemento"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="48dp"
            android:background="@drawable/design_txt_criar_evento"
            android:ems="10"
            android:hint="@string/complemento"
            android:inputType="text|textPostalAddress|textAutoComplete|textAutoCorrect"
            android:paddingStart="10dp"
            android:textColorHint="@color/dark_gray"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextRua"
            tools:ignore="RtlSymmetry"
            android:autofillHints="" />

        <android.widget.Button
            android:id="@+id/btnAdicionarEvento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/design_btn_register"
            android:text="@string/continuar"
            android:textColor="@color/real_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextComplemento"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>