<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PerfilFragment">

    <EditText
        android:id="@+id/textEmailPerfil"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/design_txt_edit"
        android:ems="10"
        android:hint="@string/perfil_email"
        android:inputType="text"
        android:paddingStart="10dp"
        android:textColorHint="@color/dark_gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNomePerfil"
        app:layout_constraintVertical_bias="0.059"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/textNomePerfil"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/design_txt_edit"
        android:ems="10"
        android:hint="@string/nome_Perfil"
        android:inputType="text"
        android:paddingStart="10dp"
        android:textColorHint="@color/dark_gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageProfile"
        app:layout_constraintVertical_bias="0.051"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/textPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/perfil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.widget.ImageButton
        android:id="@+id/imageProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="48dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/ic_profile_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPerfil"
        tools:ignore="SpeakableTextPresentCheck" />

    <android.widget.Button
        android:id="@+id/btnDeslogar"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/design_btn_login"
        android:text="@string/sair"
        android:textColor="@color/orange_main"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEmailPerfil"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>